--- a/install
+++ b/install
@@ -27,6 +27,10 @@ do
   fi
 done
 
+echo "----> adding .extra-dots"
+rm -rf ~/.extra-dots
+cp -r ./dots/.extra-dots ~/
+
 # scripts
 print_title "installing scripts"
 
