util function inside install script

--- a/scripts/install
+++ b/scripts/install
@@ -1,6 +1,23 @@
 #!/bin/sh
 set -e
-. util
+
+function brew_install() {
+	if [ -z "`brew list | grep ^$1$`" ]; then
+		echo ".... installing $1"
+		brew install $1
+	else
+		echo ".... skipping $1"
+	fi
+}
+
+function cask_install() {
+	if [ -z "`brew cask list | grep ^$1$`" ]; then
+		echo ".... installing $1"
+		brew cask install $1
+	else
+		echo ".... skipping $1"
+	fi
+}
 
 chmod +x scripts/software/*
 for file in `echo scripts/software/*`
